Fixed spacing on comments

--- a/frontend/src/components/team-page/comment-section/topic/Topic.scss
+++ b/frontend/src/components/team-page/comment-section/topic/Topic.scss
@@ -16,13 +16,15 @@
 	}
 
 	&-comments {
+		display: flex;
+		flex-direction: column;
+		row-gap: 8px;
 		padding-top: 8px;
 		padding-left: 12px;
 
 		.comment {
 			display: flex;
 			flex-direction: column;
-			row-gap: 4px;
 
 			&-info {
 				display: flex;
@@ -46,6 +48,10 @@
 				}
 			}
 
+			&-content {
+				font-size: 16px;
+				line-height: 20px;
+			}
 		}
 	}
 }
